<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.khjxiaogu</groupId>
	<artifactId>MiraiSongPlugin</artifactId>
	<version>0.2.1</version>
	<name>MiraiSongPlugin</name>
	<description>使用“#音乐 关键词”、“#QQ 关键词”、“#网易 关键词”等方式进行点歌的插件。</description>
	<build>
		<finalName>${project.name}-2.0-${project.version}</finalName>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>templating-maven-plugin</artifactId>
				<version>1.0.0</version>
				<executions>
					<execution>
						<id>filter-src</id>
						<goals>
							<goal>filter-sources</goal>
						</goals>
						<configuration>
							<delimiters>
								<delimiter>@</delimiter>
							</delimiters>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>

				<configuration>
					<filters>
						<filter>
							<artifact>com.google.code.gson:gson</artifact>
							<excludes>
								<exclude>com/google/gson/internal/reflect/*</exclude>
								<exclude>com/google/gson/internal/bind/util/*</exclude>
								<exclude>com/google/gson/reflect/*</exclude>
								<exclude>com/google/gson/annotations/*</exclude>
							</excludes>
						</filter>
					</filters>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<minimizeJar>true</minimizeJar>
					<artifactSet>
						<includes>
							<include>com.google.code.gson:gson</include>
						</includes>
					</artifactSet>
					<relocations>
						<relocation>
							<pattern>com.google.code.gson.gson</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mirai.plugin.name>点歌插件</mirai.plugin.name>
		<mirai.plugin.author>khjxiaogu</mirai.plugin.author>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<repositories>
		<repository>
			<id>alimaven</id>
			<name>aliyun maven</name>
			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
		</repository>
		<repository>
			<id>globalmvn</id>
			<url>https://mvnrepository.com/artifact/</url>
		</repository>
		<repository>
			<id>kotlin</id>
			<url>https://kotlin.bintray.com/kotlinx/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>net.mamoe</groupId>
			<artifactId>mirai-console</artifactId>
			<version>2.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.mamoe</groupId>
			<artifactId>mirai-core</artifactId>
			<version>2.0.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
		</dependency>
	</dependencies>
</project>